@@ -14,4 +14,4 @@ packages:
 - '.'
 resolver: lts-24.2
 extra-deps:
-- aws-0.25.1
+- aws-0.25.2
