@@ -4,9 +4,12 @@ git-annex (10.20251118) UNRELEASED; urgency=medium
     (Needs aws-0.25)
   * Add a build warning when the version of aws being built against is
     too old. 0.25.1 is needed to support Google Cloud Storage.
-  * stack.yaml: Use aws-0.25.1.
   * Added TRANSFER-RETRIEVE-URL extension to the external special remote
     protocol.
+  * S3: Support restore=yes, when used with storageclass=DEEP_ARCHIVE and
+    similar. This is equivilant to the now deprecated Amazon Glacier.
+    (Needs aws-0.25.2)
+  * stack.yaml: Use aws-0.25.2.
 
  -- Joey Hess <id@joeyh.name>  Tue, 18 Nov 2025 12:34:12 -0400
 
